Fix overflow scroll

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ nav ul{
     padding: 0;
     list-style-type: none;
     position: relative;
-    text-align: left;
+    text-align: left;   
 }
 
 nav li{
@@ -347,7 +347,6 @@ main{
 .row{
     display: flex;
     width: 100%;
-    overflow: scroll;
 }
 
 .shopify-section{
@@ -782,7 +781,6 @@ hr{
 
     .col-5{
         width: 100%;
-        margin-right: 30%;
         margin-top: 1em;
     }
 
@@ -856,5 +854,8 @@ hr{
     }
     .col-12{
         width: 100%;
+    }
+    .row{
+        overflow: scroll;
     }
 }
